# cbmc

./: .gitignore  CMakeLists.txt  CODEOWNERS
core/: Dimacs.h  Solver.cc  Solver.h
doc/architectural/: goto-program-transformations.md
doc/cprover-manual/: modeling-mmio.md
glucose-syrup/: .gitignore
glucose-syrup/core/: Solver.cc  SolverTypes.h
glucose-syrup/mtl/: IntTypes.h  Vec.h
glucose-syrup/simp/: SimpSolver.cc
glucose-syrup/utils/: ParseUtils.h  System.h
mtl/: template.mk
scripts/backend-performance/: measure_performance.py
simp/: Main.cc
src/: Makefile
src/analyses/: goto_check.cpp
src/ansi-c/: c_typecheck_expr.cpp  goto_check_c.cpp  goto_check_c.h
src/assembler/: remove_asm.cpp
src/cbmc/: cbmc_main.cpp  cbmc_parse_options.cpp
src/cprover/: cprover_parse_options.cpp  generalization.cpp  generalization.h  inductiveness.cpp  inductiveness.h  solver.cpp  solver.h  state_encoding.cpp  state_encoding.h
src/crangler/: c_wrangler.cpp
src/goto-checker/: all_properties_verifier_with_trace_storage.h  goto_symex_property_decider.cpp  goto_symex_property_decider.h  goto_trace_storage.h  solver_factory.cpp  solver_factory.h  verification_result.h
src/goto-programs/: Makefile  builtin_functions.cpp  goto_program.h  goto_transform_history.cpp  goto_transform_history.h  mm_io.cpp  process_goto_program.cpp  show_goto_functions.cpp  show_goto_functions_json.cpp  skolemization.cpp  (+5 more)
src/options/: CMakeLists.txt  api_options.cpp  api_options.h  solver_options.cpp  solver_options.h
unit/: Makefile  json_symbol_table.cpp
utils/: Options.cc
(+134 files in other folders)
